added Stalin Sort

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -14,7 +14,7 @@
             <option value="quick">Quick Sort</option>
             <option value="merge">Merge Sort</option>
             <option value="heap">Heap Sort</option>
-            <option value="bubble">Bubble Sort</option>
+            <option value="Stalin">Stalin Sort</option>
         </select>
         <button onclick="sort()">Sort</button>
     </div>
