separated visualization from other files

--- a/lab2/visualization/index.html
+++ b/lab2/visualization/index.html
@@ -20,12 +20,12 @@
     </div>
     <div class="settings">
         <label>Length: <input type="number" id="length" value="500"></label>
-        <label>Min: <input type="number" id="min" value="-100"></label>
-        <label>Max: <input type="number" id="max" value="100"></label>
+<!--        <label>Min: <input type="number" id="min" value="-100"></label>-->
+<!--        <label>Max: <input type="number" id="max" value="100"></label>-->
         <label>Timeout (ms): <input type="number" id="timeout" value="50"></label>
     </div>
     <div class="bars-container" id="bars"></div>
 </div>
-<script src="main.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
